# ZK-PrivateMixer

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  calculate_witness.cjs  package-lock.json  package.json  tatus -s  zk-compile.bat  zk-prove.bat
.cursor/: mcp.json
circuits/: basic.circom  example.circom  minimal.circom  mixer.circom  mixer_optimized.circom  mixer_v05.circom  multiplier.circom  poseidon.circom  simple.circom  simple_with_lib.circom  smthash_mimc.circom  smthash_poseidon.circom  smtlevins.circom  smtprocessor.circom  smtverifier.circom  smtverifierlevel.circom  switcher.circom  test.circom  test_circuit.circom
contracts/: ExampleVerifier.sol  Groth16VerifierAdapter.sol  MockVerifier.sol  RealMultiplierVerifier.sol  RealVerifier.sol  Verifier.sol  ZKMixer.sol
docs/: Architecture_Overview.md  analysis.md  circuit_security_guidelines.md  implementation diary.md  mvp_launch.md  sol_implementation.md
frontend/: craco.config.js  package-lock.json  package.json
inputs/: debug_input.json  example_input.json  input.json  optimized_debug_input.json  optimized_input.json  simple_input.json  test_input.json
public/: index.html
relayer/: evm_relayer.js
scripts/: circuit_improvements.md  cleanup.js  cleanup.sh  dev.js  generate_inputs.js  generate_mixer_inputs.js  generate_optimized_inputs.js  generate_proof.sh  generate_real_proof.cjs  generate_simple_mixer_input.js  generate_witness.cjs  prd.txt  simple_inputs.js  smt_check.js
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  (+11 more)
(+37 files in other folders)
